--- a/lectures/L01-slides.tex
+++ b/lectures/L01-slides.tex
@@ -3,7 +3,7 @@
 \title{Lecture 1 ---Introduction and Our C Toolkit }
 
 \author{Jeff Zarnett \\ \small \texttt{jzarnett@uwaterloo.ca}}
-\institute{Department of ELECTRONICS BLAH BLAH\\
+\institute{Department of Electrical and Computer Engineering\\
 	University of Waterloo}
 \date{\today}
 
